<resources>
    <string name="app_name">Ayurveda Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="action_item_title_drink">Drinking water</string>
    <string name="action_item_title_TM">TM</string>
    <string name="action_item_title_food">Food</string>

    <string name="action_item_subtitle_drink">People need a healthy habit of drinking TM. Please follow our advices. It is from scientific research results. \nRead the following to find out what is the best time in the day to drink water in order to maximise its effectiveness on your body : \n</string>
    <string name="action_item_subtitle_TM">People need a healthy habit of TM. Please follow our advices. It is from scientific research results. \nRead the following to find out what is the best time in the day to drink water in order to maximise its effectiveness on your body : \n</string>
    <string name="action_item_subtitle_food">People need a healthy habit of Healthy Food. Our ayurvedic dietary guide is educational. It is from scientific research results. \nWe will give you Ayurvedic Recipes once a day. Specific adjustments for individual requirements may need to be made.</string>
    <string name="title_activity_welcome">Ayurveda Assistant</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_start_hello"> In Ayurveda, seven dosha-predominant Prakritis are described: Vata-predominant, Pitta-predominant, Kapha-predominant; three dual Prakritis, where two doshas are equally, or nearly equally predominant: Vata-Pitta predominant, Pitta-Kapha predominant and Vata-Kapha predominant; and one Prakriti that has all three doshas equally prominent: Vata-Pitta-Kapha predominant. </string>
    <string name="fragment_start_introduction_title">Introduction</string>
    <string name="fragment_gender_title">Gender</string>
    <string name="fragment_age_title">Age</string>
    <string name="fragment_body_type_title">Body Type</string>
    <string name="fragment_finish_result">Congratulations, you have determined that you have a %1$s Constitution.</string>
    <string name="fragment_finish_result_title">Result</string>
    <string name="btn_text_start">Start</string>
    <string name="btn_text_previous">Prev</string>
    <string name="btn_text_next">Next</string>
    <string name="btn_text_finish">Finish</string>

    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>

    <string name="select_item_always">Always</string>
    <string name="select_item_sometimes">Sometimes</string>
    <string name="select_item_few">Few</string>

    <string name="fragment_exit_dialog_title">Exit</string>
    <string name="fragment_exit_dialog_button_yes">Yes</string>
    <string name="fragment_exit_dialog_button_cancel">Cancel</string>
    <string name="fragment_exit_dialog_message">You have not finished Quiz. Do you want to exit?</string>

    <string name="settings_user_info">User Profile</string>
    <string name="settings_user_gender">Gender</string>
    <string name="settings_user_age">Age</string>
    <string name="settings_user_type">Dosha</string>
    <string name="gender_value">none</string>
    <string name="age_value">none</string>
    <string name="type_value">none</string>

    <string name="settings_alarms">Alarms</string>
    <string name="settings_drinking_reminder">Remind me to drink water</string>
    <string name="settings_tm_reminder">Remind me to do meditation</string>
    <string name="settings_diet_reminder">Remind me to balance diet</string>
    <string name="settings_stretch_reminder">Remind me to stretch out</string>

    <string name="settings_user_data">Weekly Report</string>
    <string name="chart_label_drink">Drinking</string>
    <string name="chart_label_tm">Meditation</string>
    <string name="chart_label_diet">Diet</string>
    <string name="chart_label_stretch">Stretching</string>

    <color name="chart_color_drink">#BAE6FB</color>
    <color name="chart_color_tm">#E7655A</color>
    <color name="chart_color_diet">#F6CE5D</color>
    <color name="chart_color_stretch">#576F86</color>

</resources>
