<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.mum.ten.devfest.FragmentStart">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="@dimen/fragment_spin_width"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="@dimen/fragment_inner_margin_top"
        android:layout_marginRight="@dimen/fragment_inner_margin_Right"
        >
    <TextView
        android:id="@+id/introduction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_start_introduction_title" />
    <TextView
        android:id="@+id/introduction_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/introduction_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fragment_start_hello" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"

        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom|right"
        android:shadowRadius="1"
        android:background="@drawable/button_background"
        android:textColor="@color/colorButtonText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/btn_text_start"/>

</FrameLayout>
