<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mum.ten.devfest.FragmentStart">

    <RelativeLayout
        android:layout_width="@dimen/fragment_spin_width"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/fragment_inner_margin_top"
        >
        <TextView
            android:id="@+id/label_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/fragment_age_title"/>
        <EditText
            android:id="@+id/edit_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_age"
            android:singleLine="true"
            android:numeric="signed"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/btn_2_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom|right">
        <Button
            android:id="@+id/btn_previous"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:text="@string/btn_text_previous"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorPrimaryDark"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:text="@string/btn_text_next"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorPrimaryDark"
            android:layout_toRightOf="@id/btn_previous"/>
    </RelativeLayout>

</FrameLayout>
